--- a/trunk/osopos/src/Makefile
+++ b/trunk/osopos/src/Makefile
@@ -1,4 +1,5 @@
 all: invent remision factur corte impresor imprrem osopos
+install: install_invent install_remision install_factur install_corte install_impresor install_imprrem install_osopos
 
 CC = gcc -g -Wall -m486
 
@@ -15,40 +16,64 @@ C_REMISION = -Dmxmembarra=1000
 C_OSOPOS = -Dmaxspc=70 -Dmaxart=30 -Dmaxarts=1000 -Dmaxdepto=100
 
 HEADER_FACTUR = include/factur.h
-HEADER_REMISION = include/rchapa-remis.h
+HEADER_REMISION = include/electroh-remis.h
 
-IMPRESIONES_USUARIO = include/linucs.h
+IMPRESIONES_USUARIO = include/electroh.h
 
 DIR_BIN = /home/OsoPOS/bin
 
 SUPERVISOR_BINDIR = /home/OsoPOS/scaja/bin
 
 remision: remision.c
-	${CC} -o ${DIR_BIN}/remision remision.c ${PGLIBS} ${CURSESLIBS} ${C_REMISION} \
-	${C_OSOPOS}	-include ${HEADER_REMISION} -ggdb
-	chmod u+s ${DIR_BIN}/remision
+	${CC} -o ../bin/remision.o remision.c ${PGLIBS} ${CURSESLIBS} ${C_REMISION} \
+	${C_OSOPOS} -include ${HEADER_REMISION} -ggdb
 
 factur: factur.c
-	${CC} -o $(DIR_BIN)/factur factur.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS} \
+	${CC} -o ../bin/factur.o factur.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS} \
 	-D_MOD_FACTUR -ggdb
-	chmod u+s ${DIR_BIN}/factur
 
 invent: invent.c
-	${CC} -o ${SUPERVISOR_BINDIR}/invent invent.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS} \
+	${CC} -o ../bin/invent.o invent.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS} \
 	${C_OSOPOS} -ggdb
 
 corte: corte.c
-	${CC} -o ${SUPERVISOR_BINDIR}/corte corte.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS}
+	${CC} -o ../bin/corte.o corte.c ${PGLIBS} ${CURSESLIBS} ${FORMSLIBS}
 
 impresor: impresor.c
-	${CC} -o $(DIR_BIN)/imprime impresor.c ${CURSESLIBS} ${PGLIBS}
+	${CC} -o ../bin/impresor.o impresor.c ${CURSESLIBS} ${PGLIBS}
 
 osopos: osopos.c
-	${CC} -o $(DIR_BIN)/osopos osopos.c ${CURSESLIBS}
+	${CC} -o ../bin/osopos.o osopos.c ${CURSESLIBS}
 
 imprrem: imprrem.c
-	${CC} -o $(DIR_BIN)/imprrem imprrem.c ${CURSESLIBS} ${PGLIBS}
+	${CC} -o ../bin/imprrem.o imprrem.c ${CURSESLIBS} ${PGLIBS}
 
 gtk_invent: gtk_invent.c
 	${CC} -o ${SUPERVISOR_BINDIR}/gtk_invent gtk_invent.c ${GTKLIBS} \
         ${PGLIBS} ${C_OSOPOS}
+
+install_remision:
+	cp ../bin/remision.o $(DIR_BIN)/remision
+	chmod u+s ${DIR_BIN}/remision
+
+install_factur:
+	cp ../bin/factur.o $(DIR_BIN)/factur
+	chmod u+s ${DIR_BIN}/factur
+
+install_osopos:
+	cp ../bin/osopos.o $(DIR_BIN)/osopos
+
+install_imprrem:
+	cp ../bin/imprrem.o $(DIR_BIN)/imprrem
+
+install_invent:
+	cp ../bin/invent.o $(SUPERVISOR_BINDIR)/invent
+
+install_corte:
+	cp ../bin/corte.o $(SUPERVISOR_BINDIR)/corte
+
+install_impresor:
+	cp ../bin/impresor.o $(DIR_BIN)/impresor
+
+clean:
+	rm -f ../bin/*.o
