--- a/osopos/bin/remision.config
+++ b/osopos/bin/remision.config
@@ -1,13 +1,9 @@
-#raw printing will not be supported anymore
-#ticket=/home/OsoPOS/scaja/ticket
-#ticket=/dev/lp0
-#definition of miniprimter on /etc/printcap
+ticket=/tmp/ticket
+#definition of miniprinter on /etc/printcap
 lp_ticket=ticket
-datos=/home/OsoPOS/caja/venta.ultima
 programa.imprem=~/bin/imprem
-precios=/home/OsoPOS/scaja/articulos.osopos
-registro=/home/OsoPOS/scaja/log/ventas.hoy
-ticket.pie=/home/OsoPOS/caja/pie_pagina.txt
-ticket.encabezado=/home/OsoPOS/caja/encabezado.txt
-registro.ticket=/home/OsoPOS/scaja/log/remision.hoy
-existencias=/home/OsoPOS/scaja/articulos.osopos
+ticket.pie=../pie_pagina.txt
+ticket.encabezado=../encabezado.txt
+miniimpresora.tipo=EPSON
+programa.factur=kfmbrowser http://localhost/~israel/osopos-web/factur_web.php
+
