Updating from my personal repository. Approaching to OSOPoS 2.0 pre-alpha

--- a/osopos/bin/factur.config
+++ b/osopos/bin/factur.config
@@ -1,11 +1,9 @@
 #factura=/home/OsoPOS/log/tmp/impresion.factura
 #Para impresion directa al puerto, descomente la siguiente línea
-factura=/dev/lp2
-registro=/home/OsoPOS/scaja/log/facturas
-#registro=/home/OsoPOS/scaja/log/linucs/facturas
-datos=/home/OsoPOS/caja/venta.ultima
+#factura=/dev/lp2
 #impresora=/dev/lp1
-impresora=/dev/lp2
+#impresora=/dev/lp2
+impresora.lpr=lp
 impresora.tipo=IBM
 #impresora.tipo=EPSON
 renglones.articulos=20
