--- a/trunk/osopos/bin/factur.config
+++ b/trunk/osopos/bin/factur.config
@@ -1,9 +1,5 @@
-#factura=/home/OsoPOS/log/tmp/impresion.factura
-#Para impresion directa al puerto, descomente la siguiente línea
-#factura=/dev/lp2
-#impresora=/dev/lp1
-#impresora=/dev/lp2
-impresora.lpr=lp
+factura=/tmp/scaja_factura
+#impresora.puerto=/dev/lp0
 impresora.tipo=IBM
 #impresora.tipo=EPSON
 renglones.articulos=20
