--- a/osopos/bin/remision.config
+++ b/osopos/bin/remision.config
@@ -1,9 +1,9 @@
 ticket=/tmp/ticket
 #definition of miniprinter on /etc/printcap
 lp_ticket=ticket
-programa.imprem=~/bin/imprem
-ticket.pie=../pie_pagina.txt
-ticket.encabezado=../encabezado.txt
+programa.imprem=/usr/bin/imprem
+ticket.pie=/home/scaja/pie_pagina.txt
+ticket.encabezado=/home/scaja/encabezado.txt
 miniimpresora.tipo=EPSON
-programa.factur=kfmbrowser http://localhost/~israel/osopos-web/factur_web.php
-
+#programa.factur=kfmbrowser http://localhost/~israel/osopos-web/factur_web.php
+programa.factur=/usr/bin/factur
