--- a/trunk/osopos/src/Makefile
+++ b/trunk/osopos/src/Makefile
@@ -1,9 +1,11 @@
 all: invent remision carrito factur corte imprrem osopos
 install: install_invent install_remision install_factur install_corte install_imprrem install_osopos
 
-CC = gcc -g -Wall
+CC = gcc -g -Wall 
 
-PGLIBS = -lpq -lcrypt
+PGLIBS = -lpq
+
+CRYPTLIBS = -lcrypt
 
 CURSESLIBS = -lncurses
 
@@ -15,7 +17,7 @@ FORMSLIBS = -lform
 
 GLIBLIBS = `pkg-config --cflags --libs glib-2.0`
 
-C_REMISION = -Dmxmembarra=8000 -Dmxmemdivisa=5 -Dmaxitem_busqueda=100
+C_REMISION = -Dmxmembarra=8000 -Dmxmemdivisa=5 -Dmaxitem_busqueda=100 -D_SERIAL_COMM
 
 C_OSOPOS = -Dmaxspc=70 -Dmaxart=30 -Dmaxarts=6000 -Dmaxdepto=500
 
@@ -24,29 +26,25 @@ C_IMPRREM = -Dmxmemdivisa=5
 HEADER_FACTUR = include/factur.h
 HEADER_REMISION = include/minegocio-remis.h
 
-IMPRESIONES_USUARIO = include/labotana.h
+IMPRESIONES_USUARIO = include/minegocio.h
 
 DIR_BIN = /usr/bin
-
-SUPERVISOR_BINDIR = /home/OsoPOS/scaja/bin
 
 BUILD_BINDIR = ../bin
 
 remision: remision.c
 	${CC} -o ${BUILD_BINDIR}/remision.o remision.c ${PGLIBS} ${FORMSLIBS} \
-	${PANELLIBS} ${CURSESLIBS} ${GLIBLIBS} ${C_REMISION} ${C_OSOPOS} -ggdb
+	${PANELLIBS} ${CURSESLIBS} ${GLIBLIBS} ${CRYPTLIBS} \
+	${C_REMISION} ${C_OSOPOS} -ggdb
 
 carrito: carrito.c
 	${CC} -o ${BUILD_BINDIR}/carrito.o carrito.c ${PGLIBS} ${FORMSLIBS} \
-	${PANELLIBS} ${CURSESLIBS} ${GLIBLIBS} ${C_REMISION} ${C_OSOPOS} -ggdb
+	${PANELLIBS} ${CURSESLIBS} ${GLIBLIBS} ${CRYPTLIBS} \
+	${C_REMISION} ${C_OSOPOS} -ggdb
 
 factur: factur.c
-	${CC} -o ${BUILD_BINDIR}/factur.o factur.c ${GLIBLIBS} ${PGLIBS} ${FORMSLIBS}  \
-	${CURSESLIBS} ${PANELLIBS} -D_MOD_FACTUR -ggdb
-
-test-factur: test-captura-cliente.c
-	${CC} -o ${BUILD_BINDIR}/test.o test-captura-cliente.c ${GLIBLIBS} ${PGLIBS} ${FORMSLIBS}  \
-	${CURSESLIBS} ${PANELLIBS} -D_MOD_FACTUR -ggdb
+	${CC} -o ${BUILD_BINDIR}/factur.o factur.c ${PGLIBS} ${FORMSLIBS} ${PANELLIBS} \
+	${CURSESLIBS} -D_MOD_FACTUR -ggdb
 
 invent: invent.c
 	${CC} -o ${BUILD_BINDIR}/invent.o invent.c ${PGLIBS} ${FORMSLIBS} ${CURSESLIBS} \
@@ -58,7 +56,7 @@ movinvent: mov_invent.c
 
 corte: corte.c
 	${CC} -o ${BUILD_BINDIR}/corte.o corte.c ${PGLIBS} ${FORMSLIBS} ${CURSESLIBS} \
-	${PANELLIBS} ${GLIBLIBS} -ggdb
+	${CRYPTLIBS} ${PANELLIBS} ${GLIBLIBS} -ggdb
 
 osopos: osopos.c
 	${CC} -o ${BUILD_BINDIR}/osopos.o osopos.c ${CURSESLIBS}
@@ -67,7 +65,7 @@ imprrem: imprrem.c
 	${CC} -o ${BUILD_BINDIR}/imprrem.o imprrem.c ${CURSESLIBS} ${PGLIBS} ${C_IMPRREM} -ggdb
 
 gtk_invent: gtk_invent.c
-	${CC} -o ${SUPERVISOR_BINDIR}/gtk_invent gtk_invent.c ${GTKLIBS} \
+	${CC} -o ${BUILD_BINDIR}/gtk_invent gtk_invent.c ${GTKLIBS} \
         ${PGLIBS} ${C_OSOPOS}
 
 install_remision:
